--- a/JiniPrint/pom.xml
+++ b/JiniPrint/pom.xml
@@ -113,9 +113,9 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>net.jini</groupId>
-            <artifactId>jsk-platform</artifactId>
-            <version>2.2.2</version>
+            <groupId>au.net.zeus.jgdms</groupId>
+            <artifactId>jgdms-platform</artifactId>
+            <version>3.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>
